# PigeonShell

./: CMakeLists.txt  LICENSE  README.md  config.ini  main.cpp  readconfig.cpp  readconfig.hpp  taskbar.hpp
Panels/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  dock  taskbar
Panels/src/dock/: dock.cpp
src(old)/: compile.sh  taskbar.cpp
